09. Apr. 2012 - amo - IExtendedComponent deleted
09. Apr. 2012 - amo - removed setRoot from IComponentView
09. Apr. 2012 - amo - add perspective annotation
08. Apr. 2012 - amo - removed some setter from IComponent  
08. Apr. 2012 - amo - IComponentView and IPerspectiveView extracted
08. Apr. 2012 - amo - Component and CallBackComponent annotiation added
06. Apr. 2012 - amo - renamed IVComponent to IVisibleComponent
06. Apr. 2012 - amo - renamed iLayoutAble to IVisibleComponent
06. Apr. 2012 - amo - removed iMapReduceComponente... out of scope currently 
02. Apr. 2012 - amo -  updated to version number 1.05
01. Apr. 2012 - amo - renamed ICallbackComponent to IStatefulComponent
01. Apr. 2012 - amo - renamed IStateLess* to IStateless* 
06. Feb. 2012 - amo - changed IComponent-API to getListener("id", message) getListener now takes parameters; to avoid something like getListener().getAction().setMessage()....
14. Dez. 2011 - amo - add getActionListener() to IWorkbench to allow workbench to send messages
09. Dez. 2011 - amo - split the delegator interface in message and component delegator
08. Dez. 2011 - amo - renamed statelesscomponentcoordinator in *Scheduler; removed dependency between statelesscomponent and scheduler, introduced new package
08. Dez. 2011 - amo - extract componentHandler interface to move methods from workbench and perspective; this handler coordinates creation and replacement of components, introduced new package
06. Dez. 2011 - amo - remove delegateMessage and delegateTarget change from IPerspective, add dependency to delegate queue
05. Dez. 2011 - amo - introduced IComponentDelegator and IDelegator to extract delegate methods from coordinator, removed circular dependency between components and coordinator
29. Nov. 2011 - amo - changed dependencies between observer, component and perspective; renamed BG components to "callback".